Add connect from ip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.27)
-project(HelloNetwork)
+project(NestNetwork)
 
 set(CMAKE_CXX_STANDARD 20)
 option(ENET_STATIC "Enet static" ON)
